--- a/index.html
+++ b/index.html
@@ -150,11 +150,12 @@
 
       <!-- Action Button -->
       <div class="hidden md:block">
-        <button id="nav-btn"
+        <!-- UPDATED: Changed from <button> to <a> to link to WhatsApp properly -->
+        <a href="https://wa.me/6288997766" target="_blank" id="nav-btn"
           class="px-6 py-2.5 rounded-full font-bold text-sm transition-all hover:-translate-y-0.5 flex items-center gap-2 bg-gold-light text-navy hover:bg-white">
           Konsultasi WA
           <i data-lucide="arrow-right" class="w-4 h-4 stroke-[3]"></i>
-        </button>
+        </a>
       </div>
 
       <!-- Mobile Menu Toggle -->
@@ -196,18 +197,20 @@
         </p>
 
         <div class="flex flex-col md:flex-row justify-center gap-4 w-full md:w-auto px-8 md:px-0">
-          <button
+          <!-- Button 1: Lihat Paket (Scroll ke section paket) -->
+          <a href="#paket"
             class="group bg-gradient-to-r from-gold to-gold-light text-navy hover:bg-white hover:text-navy px-8 py-4 rounded-full font-bold text-base transition-all flex items-center justify-center gap-2 w-full md:w-auto hover:shadow-lg hover:shadow-gold/20">
             Lihat Paket Promo
             <i data-lucide="arrow-right"
               class="w-4 h-4 opacity-0 -ml-4 group-hover:opacity-100 group-hover:ml-0 transition-all stroke-[2.5]"></i>
-          </button>
-          <button
+          </a>
+          <!-- Button 2: Hubungi Kami (Link ke WA, UPDATED from button to <a>) -->
+          <a href="https://wa.me/6288997766" target="_blank"
             class="group bg-white/10 backdrop-blur-sm border border-gold-light/30 text-white hover:bg-white hover:text-navy px-8 py-4 rounded-full font-bold text-base transition-all flex items-center justify-center gap-2 w-full md:w-auto">
             Hubungi Kami
             <i data-lucide="arrow-right"
               class="w-4 h-4 opacity-0 -ml-4 group-hover:opacity-100 group-hover:ml-0 transition-all stroke-[2.5]"></i>
-          </button>
+          </a>
         </div>
       </div>
 
@@ -237,7 +240,7 @@
       <div
         class="group relative w-32 h-48 md:w-56 md:h-80 bg-white rounded-[2.5rem] md:rounded-[3rem] shadow-lg shadow-gray-200/50 z-10 border-4 md:border-8 border-white/20 overflow-hidden cursor-pointer hover:shadow-2xl hover:shadow-gray-400/50 transition-all duration-300 card-radius-fix hover:-translate-y-2">
         <img
-          src="https://images.unsplash.com/photo-1627728734379-a5f8c099763e?fm=jpg&q=60&w=800&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bWFra2FofGVufDB8fDB8fHww"
+          src="https://images.unsplash.com/photo-1627728734379-a5f8c099763e?fm=jpg&q=60&w=800&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bWFkaW5haHxlbnwwfHwwfHx8MA%3D%3D"
           alt="Makkah" class="w-full h-full object-cover transition-transform duration-1000 group-hover:scale-110"
           onerror="this.src='https://placehold.co/400x600/001A6E/ffffff?text=Makkah'">
         <div
@@ -604,12 +607,13 @@
             untuk kekhusyukan ibadah di tanah suci.
           </p>
           <div class="flex gap-4">
+            <!-- UPDATED: Icon size w-5 h-5 -->
             <a href="#" class="text-gold-light hover:text-white transition-colors bg-white/10 p-2 rounded-full"><i
-                data-lucide="instagram" class="w-4 h-4"></i></a>
+                data-lucide="instagram" class="w-5 h-5"></i></a>
             <a href="#" class="text-gold-light hover:text-white transition-colors bg-white/10 p-2 rounded-full"><i
-                data-lucide="facebook" class="w-4 h-4"></i></a>
+                data-lucide="facebook" class="w-5 h-5"></i></a>
             <a href="#" class="text-gold-light hover:text-white transition-colors bg-white/10 p-2 rounded-full"><i
-                data-lucide="youtube" class="w-4 h-4"></i></a>
+                data-lucide="youtube" class="w-5 h-5"></i></a>
           </div>
         </div>
 
@@ -644,16 +648,17 @@
         <div>
           <h4 class="text-gold-light font-bold mb-6 tracking-wide font-messiri">Hubungi Kami</h4>
           <ul class="space-y-4 text-sm text-gray-300 font-light font-sans">
+            <!-- UPDATED: flex-shrink-0 and consistent w-5 h-5 -->
             <li class="flex items-start gap-3">
-              <i data-lucide="map-pin" class="w-5 h-5 text-gold mt-0.5"></i>
+              <i data-lucide="map-pin" class="w-5 h-5 text-gold mt-0.5 flex-shrink-0"></i>
               <span>Jl. KH. Abdullah Syafei No. 12, Jakarta Selatan, 12860</span>
             </li>
             <li class="flex items-center gap-3">
-              <i data-lucide="phone" class="w-5 h-5 text-gold"></i>
+              <i data-lucide="phone" class="w-5 h-5 text-gold flex-shrink-0"></i>
               <span>+62 21 8899 7766</span>
             </li>
             <li class="flex items-center gap-3">
-              <i data-lucide="mail" class="w-5 h-5 text-gold"></i>
+              <i data-lucide="mail" class="w-5 h-5 text-gold flex-shrink-0"></i>
               <span>info@aryatitravel.com</span>
             </li>
           </ul>
@@ -698,10 +703,11 @@
     <a href="#"
       class="mobile-link text-xl font-bold text-white hover:text-gold-light transition-colors font-messiri">Tentang
       Kami</a>
-    <button
-      class="mt-4 bg-gold-light text-navy px-8 py-3 rounded-full font-bold text-lg hover:bg-white transition-colors">
+    <!-- UPDATED: Added link functionality -->
+    <a href="https://wa.me/6288997766" target="_blank"
+      class="mt-4 bg-gold-light text-navy px-8 py-3 rounded-full font-bold text-lg hover:bg-white transition-colors text-center">
       Konsultasi
-    </button>
+    </a>
   </div>
 
   <!-- SCRIPTS MOVED TO BODY END TO PREVENT LOAD ERRORS -->
@@ -793,7 +799,7 @@
       if (umrohContainer) {
         umrohPackages.forEach(pkg => {
           const cardHTML = `
-                    <div class="w-full max-w-sm bg-white rounded-[2.5rem] border border-gold/30 overflow-hidden relative group transition-colors duration-500 mx-auto shadow-lg shadow-gray-200/50 hover:-translate-y-2 hover:shadow-xl hover:shadow-gold/10 hover:border-gold/30 transition-all">
+                    <div class="w-full max-w-sm bg-white rounded-[2.5rem] border border-gold/30 overflow-hidden relative group transition-colors duration-500 mx-auto shadow-lg shadow-gray-200/50 hover:-translate-y-2 hover:shadow-2xl hover:shadow-gold/10 hover:border-gold/30 transition-all">
                         <div class="relative h-48 overflow-hidden shrink-0 bg-gray-200">
                             <img src="${pkg.image}" alt="${pkg.title}" class="w-full h-full object-cover transition-transform duration-1000 group-hover:scale-110" onerror="this.src='https://placehold.co/600x400/001A6E/ffffff?text=Image+Unavailable'">
                             <div class="absolute inset-0 bg-gradient-to-t from-navy/90 via-navy/20 to-transparent opacity-80 group-hover:opacity-90 transition-opacity"></div>
