--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="id" class="scroll-smooth">
 
 <head>
+  <meta name="google-site-verification" content="D-rdxNi1lwK0f7SbF7HHd3gp1GZnGfJ0vS2Auy59efM" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ARYATI Tour & Travel - Umroh & Haji Terpercaya</title>
